apps/hellosaanvika/overlays/dev/probes-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellosaanvika
spec:
  template:
    spec:
      containers:
        - name: app

          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
