apps/hellosaanvika/overlays/dev/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellosaanvika
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
