apps/hellosaanvika/overlays/dev/rollout-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellosaanvika
spec:
  minReadySeconds: 10
  progressDeadlineSeconds: 120

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
